Split TODO from README.